<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.carina.notificacao.MainActivity">


    <Button
        android:id="@+id/btnNotificacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnNotificacao" />

    <Button
        android:id="@+id/btnNotificacaoGrande"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnNotificacaoGrande" />

    <Button
        android:id="@+id/btnHeadsUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnHeadsUp" />

    <Button
        android:id="@+id/btnProgresso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnProgresso" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCancelar" />

    <Button
        android:id="@+id/btnEnviarBroadcast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnEnviarBroadcast" />
</LinearLayout>
